# LangGraph-With-uv-Package-Manager

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
chatbot/: basic_chatbot.ipynb
desktop_ui/: README.md  __init__.py  app.py  chat_sessions.json  main.py  mcp_client.py  requirements.txt  run_streamlit.py  run_test_server.py
linkedin_agent/: README.md  __init__.py  agent_graph.py  agent_state.py  app.py  content_creator.py  linkedin_api.py  load_env.py  main.py  requirements.txt  tools.py
mcp_server/: client.py  mathserver.py  weather.py
