[project]
name = "uv-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "groq>=0.30.0",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.6",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.1",
    "langsmith>=0.4.8",
    "mcp>=1.12.3",
    "pyowm>=3.3.0",
    "python-dotenv>=1.1.1",
    "python-linkedin-v2>=0.9.4",
    "requests>=2.32.4",
]
